feat(health): implementar endpoint de liveness en el Orquestador #13
